examples/errors/ModuleScriptCodeError.flx
module Errors.ModuleScriptCodeError { fun value() { 1; } }
1;
